<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scheduler</name>
  <version>0.1.0</version>
  <description>ROS2 scheduler node for controlling relays based on time, sun position, and relay state conditions</description>
  <maintainer email="support@emoco.com">Emoco Labs</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-astral</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
